[gd_scene load_steps=4 format=3 uid="uid://cd5vqgevfy0rp"]

[ext_resource type="Script" uid="uid://t2j1ab2haw28" path="res://game_components/collectables/collectable.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://o7ttmao74ij" path="res://assets/audio/sfx/diamond_collected.wav" id="2_k6kjy"]
[ext_resource type="PackedScene" path="res://game_components/collectables/diamond.tscn" id="3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_base"]

[node name="Collectable" type="Node3D"]
script = ExtResource("1")

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.50460035, 0)
shape = SubResource("BoxShape3D_base")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k6kjy")

[node name="DebugMesh" type="MeshInstance3D" parent="."]

[node name="DiamondMesh" parent="." instance=ExtResource("3")]
